--- a/WannabeReddit/WannabeReddit.csproj
+++ b/WannabeReddit/WannabeReddit.csproj
@@ -194,10 +194,25 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201704212121106_MadePostClass.cs" />
+    <Compile Include="Migrations\201704212121106_MadePostClass.Designer.cs">
+      <DependentUpon>201704212121106_MadePostClass.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201704212126194_ActuallyMadeTable.cs" />
+    <Compile Include="Migrations\201704212126194_ActuallyMadeTable.Designer.cs">
+      <DependentUpon>201704212126194_ActuallyMadeTable.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201704212201520_MadeListOfPosts.cs" />
+    <Compile Include="Migrations\201704212201520_MadeListOfPosts.Designer.cs">
+      <DependentUpon>201704212201520_MadeListOfPosts.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\Post.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\PostServices.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -207,6 +222,7 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Images\doublezero.jpg" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="ApplicationInsights.config">
@@ -260,6 +276,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="ViewModels\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
@@ -275,6 +292,17 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201704212121106_MadePostClass.resx">
+      <DependentUpon>201704212121106_MadePostClass.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201704212126194_ActuallyMadeTable.resx">
+      <DependentUpon>201704212126194_ActuallyMadeTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201704212201520_MadeListOfPosts.resx">
+      <DependentUpon>201704212201520_MadeListOfPosts.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
