--- a/WannabeReddit/WannabeReddit.csproj
+++ b/WannabeReddit/WannabeReddit.csproj
@@ -211,6 +211,14 @@
     <Compile Include="Migrations\201704221607488_Tablechanges.Designer.cs">
       <DependentUpon>201704221607488_Tablechanges.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201704221805371_defaultvalues.cs" />
+    <Compile Include="Migrations\201704221805371_defaultvalues.Designer.cs">
+      <DependentUpon>201704221805371_defaultvalues.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201704221912247_brlgkjg.cs" />
+    <Compile Include="Migrations\201704221912247_brlgkjg.Designer.cs">
+      <DependentUpon>201704221912247_brlgkjg.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
@@ -286,7 +294,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="ViewModels\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
@@ -315,6 +322,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201704221607488_Tablechanges.resx">
       <DependentUpon>201704221607488_Tablechanges.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201704221805371_defaultvalues.resx">
+      <DependentUpon>201704221805371_defaultvalues.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201704221912247_brlgkjg.resx">
+      <DependentUpon>201704221912247_brlgkjg.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
