--- a/WannabeReddit/WannabeReddit.csproj
+++ b/WannabeReddit/WannabeReddit.csproj
@@ -219,6 +219,10 @@
     <Compile Include="Migrations\201704221912247_brlgkjg.Designer.cs">
       <DependentUpon>201704221912247_brlgkjg.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201705020152510_test.cs" />
+    <Compile Include="Migrations\201705020152510_test.Designer.cs">
+      <DependentUpon>201705020152510_test.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
@@ -330,6 +334,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201704221912247_brlgkjg.resx">
       <DependentUpon>201704221912247_brlgkjg.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201705020152510_test.resx">
+      <DependentUpon>201705020152510_test.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
